--- a/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
+++ b/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
@@ -1,17 +1,235 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "import scipy.stats as st"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Introduction to Statistical Methods Formulas and Code"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistics\n",
+    "\n",
+    "- field that focuses on understanding and analyzing data, providing us with a toolkit of methods and techniques to collect, organize, summarize, and interpret data in a meaningful way\n",
+    "- goal is to uncover patterns, relationships, and insights that can help us make informed decisions and draw reliable conclusions\n",
+    "- descriptive statistics: methods that help us summarize and describe data in a concise and informative way\n",
+    "- inferential statistics: methods that help us draw conclusions about a population based on a sample of data from that population\n",
+    "\n",
+    "#### Types of variables\n",
+    "1. Qualitative (categorical) variables\n",
+    "    - variables that can be placed into distinct categories, according to some characteristic or attribute\n",
+    "    - nominal variables: variables that have no natural ordering\n",
+    "    - ordinal variables: variables that have a natural ordering\n",
+    "2. Quantitative (numerical) variables\n",
+    "    - variables that are measured on a numeric scale\n",
+    "    - discrete variables: variables that can only take on a finite number of values\n",
+    "    - continuous variables: variables that can take on an infinite number of values\n",
+    "        1. interval variables: variables that have no natural zero point, ratios of values are not meaningful\n",
+    "        2. ratio variables: variables that have a natural zero point, ratios of values are meaningful\n",
+    "\n",
+    "#### Measures of central tendency\n",
+    "They are measures that describe the center of a distribution of data\n",
+    "- mean: the average of a set of values\n",
+    "$${\\displaystyle {\\bar {x}}={\\frac {1}{n}}\\left(\\sum_{i=1}^{n}{x_{i}}\\right)={\\frac {x_{1}+x_{2}+\\cdots +x_{n}}{n}}}$$\n",
+    "- median: the middle value of a set of values\n",
+    "$$\\mathrm{median}(x) = \\begin{cases} \n",
+    "    x_{\\frac{n+1}{2}} & \\text{if } n \\text{ is odd} \\\\\n",
+    "    \\frac{x_{\\frac{n}{2}} + x_{\\frac{n + 1}{2}}}{2} & \\text{if } n \\text{ is even}\n",
+    "\\end{cases}$$\n",
+    "- mode: the most frequently occurring value in a set of values\n",
+    "\n",
+    "| Measure | When to Use |\n",
+    "|---------|-------------|\n",
+    "| Mean    | When data is normally distributed and there are no extreme outliers. |\n",
+    "| Median  | When data has outliers or is skewed, providing a robust central value. |\n",
+    "| Mode    | When identifying the most frequent or common value in categorical data. |\n",
+    "\n",
+    "Other results:\n",
+    "$$mean − mode ≈ 3(mean − median)$$\n",
+    "$$midrange = (min + max) / 2$$\n",
+    "$$range = max− min$$\n",
+    "\n",
+    "##### Skewness\n",
+    "\n",
+    "| Distribution | Characteristics | Mean vs Median vs Mode |\n",
+    "|--|--|--|\n",
+    "| Positive | Data skewed towards higher values<br>Majority of observations on the left side<br>Long tail on the right side | Mean > Median > Mode    |\n",
+    "| Negative | Data skewed towards lower values<br>Majority of observations on the right side<br>Long tail on the left side | Mean < Median < Mode     |\n",
+    "| Symmetric | Balanced distribution<br>Observations evenly spread on both sides | Mean ≈ Median ≈ Mode    |\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/c/cc/Relationship_between_mean_and_median_under_different_skewness.png\" width=\"400\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n",
+    "Bi-modal distributions have two peaks, while multi-modal distributions have more than two peaks.\n",
+    "\n",
+    "#### Measures of variability\n",
+    "They are measures that describe the spread of a distribution of data, to describe the distribution of data in a more complete way, and measure how well an individual value represents the entire distribution\n",
+    "- range: the difference between the maximum and minimum values\n",
+    "- variance: the average squared deviation from the mean\n",
+    "$$\\sigma^2 = \\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}{n}$$\n",
+    "- standard deviation: the square root of the variance\n",
+    "$$\\sigma = \\sqrt{\\frac{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}{n}}$$\n",
+    "- coefficient of variation: the ratio of the standard deviation to the mean\n",
+    "$$CV = \\frac{\\sigma}{\\bar{x}}$$\n",
+    "\n",
+    "| Measure | When to use |\n",
+    "|--|--|\n",
+    "| Range | you need a quick measure of the spread or dispersion of data and want to know the difference between the highest and lowest values in the dataset.       |\n",
+    "| Variance | you want to quantify the average squared deviation of data points from the mean, providing a measure of how much the data points vary from the mean value. |\n",
+    "| Standard Deviation | you want a measure of the dispersion of data that is easy to interpret and represents the typical distance between each data point and the mean. |\n",
+    "| Coefficient of Variation | you want to compare the relative variability between datasets with different units of measurement, allowing you to assess the variation relative to the mean. |\n",
+    "\n",
+    "Above formulas are for population, for sample, we use $n-1$ instead of $n$ in the denominator:\n",
+    "- to provide an unbiased estimate of the population variance or standard deviation\n",
+    "- adjustment accounts for the loss of one degree of freedom when estimating the sample mean and helps to avoid underestimating the true population variance or standard deviation\n",
+    "- using $n−1$, we provide a more conservative estimate of the variability in the population, ensuring that our statistical inferences are more accurate and reliable\n",
+    "\n",
+    "#### 5-point summary\n",
+    "- minimum: the smallest value in the dataset\n",
+    "- first quartile: the value such that 25% of the data falls below\n",
+    "- median: the middle value in the dataset\n",
+    "- third quartile: the value such that 75% of the data falls below\n",
+    "- maximum: the largest value in the dataset\n",
+    "\n",
+    "#### Boxplots\n",
+    "- boxplots are a graphical representation of the 5-point summary\n",
+    "- outliers are observations that fall outside the upper and lower fences\n",
+    "<img src=\"https://i.imgur.com/BgJweoR.png\" width=\"400\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Len : 15, sorted : [20, 22, 30, 33, 33, 35, 35, 35, 35, 36, 40, 41, 42, 51, 54]\n",
+      "Mean : 36.13333333333333\n",
+      "Median : 35.0\n",
+      "Mode : ModeResult(mode=35, count=4)\n",
+      "Q1 : 33.0, Median : 35.0, Q3 : 40.5\n",
+      "IQR : 7.5\n",
+      "Minimum : 21.75, Maximum : 51.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.array([20, 22, 30, 33, 33, 35, 35, 35, 35, 36, 40, 41, 42, 51, 54])\n",
+    "print(f'Len : {len(data)}, sorted : {sorted(data)}')\n",
+    "print(f'Mean : {np.mean(data)}')\n",
+    "print(f'Median : {np.median(data)}')\n",
+    "print(f'Mode : {st.mode(data, keepdims=False)}')\n",
+    "q1 = np.quantile(data, 0.25, method= 'midpoint')\n",
+    "q2 = np.quantile(data, 0.5, method= 'midpoint')\n",
+    "q3 = np.quantile(data, 0.75, method= 'midpoint')\n",
+    "iqr = q3 - q1\n",
+    "minimum = q1 - 1.5 * iqr\n",
+    "maximum = q3 + 1.5 * iqr\n",
+    "print(f'Q1 : {q1}, Median : {q2}, Q3 : {q3}')\n",
+    "print(f'IQR : {iqr}')\n",
+    "print(f'Minimum : {minimum}, Maximum : {maximum}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probability\n",
+    "\n",
+    "#### Random experiments\n",
+    "- random experiments are actions that occur by chance, and their outcomes are not predictable\n",
+    "- sample space: the set of all possible outcomes of a random event\n",
+    "    - discrete sample space: a sample space with a finite number of outcomes\n",
+    "    - continuous sample space: a sample space with an infinite number of outcomes\n",
+    "- event: a subset of the sample space\n",
+    "- probability: a numerical measure of the likelihood that an event will occur\n",
+    "$$ P(A) = \\frac{\\text{number of outcomes in A}}{\\text{number of outcomes in S}} = \\frac{\\text{number of favorable outcomes}}{\\text{number of possible outcomes}}$$\n",
+    "- empirical probability: the relative frequency of an event occurring in a series of trials\n",
+    "$$ P_{empirical}(A) = \\frac{\\text{number of times A occurs}}{\\text{number of observations}}$$\n",
+    "- theoretical probability: the probability of an event occurring based on mathematical reasoning\n",
+    "- law of large numbers: as the number of trials increases, the empirical probability of an event will converge to the theoretical probability of that event\n",
+    "\n",
+    "#### Events\n",
+    "- an event is a subset of the sample space of a random experiment\n",
+    "- complement of an event: the set of all outcomes in the sample space that are not in the event\n",
+    "- union of two events: the set of all outcomes that are in either event\n",
+    "- intersection of two events: the set of all outcomes that are in both events\n",
+    "- mutually exclusive events: events that have no outcomes in common\n",
+    "- independent events: events that have no effect on each other\n",
+    "- addition rule: the probability of the union of two events is equal to the sum of the probabilities of the individual events minus the probability of their intersection\n",
+    "$$ P(A \\cup B) = P(A) + P(B) - P(A \\cap B)$$\n",
+    "\n",
+    "#### Probability\n",
+    "- a number assigned to each member of the sample space of a random experiment that satisfies the following axioms:\n",
+    "    1. $0 \\leq P(A) \\leq 1$\n",
+    "    2. $P(S) = 1$\n",
+    "    3. For two events $A$ and $B$, if $A$ and $B$ are mutually exclusive, then $P(A \\cup B) = P(A) + P(B)$\n",
+    "- it is a measure of the likelihood of occurrence of an event\n",
+    "\n",
+    "#### Random variables\n",
+    "- random variables are variables that take on numerical values based on the outcome of a random experiment\n",
+    "- discrete random variables: random variables that can take on a finite number of values\n",
+    "- continuous random variables: random variables that can take on an infinite number of values"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditional probability\n",
+    "\n",
+    "For any two events $A$ and $B$ with $P(B) > 0$, the conditional probability of $A$ given $B$ is defined as:\n",
+    "$$ P(A|B) = \\frac{P(A \\cap B)}{P(B)}$$\n",
+    "\n",
+    "Conditional probabilities for three events $A$, $B$, and $C$:\n",
+    "$$ P(A \\cap B \\cap C) = P(A|B \\cap C)P(B \\cap C) = P(A|B \\cap C)P(B|C)P(C)$$\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
