--- a/Semester 2/ACI/ACI_Formulas_and_Code.ipynb
+++ b/Semester 2/ACI/ACI_Formulas_and_Code.ipynb
@@ -92,8 +92,8 @@
     "\n",
     "#### Task Environment Dimensions\n",
     "1. sensing\n",
-    "    - fully observable : sensors give access to the complete state of the environment at each point in time\n",
-    "    - partially observable : sensors give access to only partial state of the environment at each point in time\n",
+    "    - fully observable : sensors give access to the complete state of the environment at each point in time (eg. chess)\n",
+    "    - partially observable : sensors give access to only partial state of the environment at each point in time (eg. poker)\n",
     "2. state determinism\n",
     "    - deterministic : next state of environment is completely determined by current state and action executed by agent\n",
     "    - stochastic : next state of environment is not completely determined by current state and action executed by agent\n",
@@ -105,7 +105,7 @@
     "    - dynamic : environment can change while agent is deliberating\n",
     "    - semi-dynamic : environment does not change with passage of time, but the agent's performance score does\n",
     "5. number of agents\n",
-    "    - single agent : agent is operating by itself\n",
+    "    - single agent : agent is operating by itself in the environment\n",
     "    - multiagent : agent is operating with other agents\n",
     "6. number of states / actions\n",
     "    - discrete : finite number of states / actions, represented by integers\n",
@@ -150,6 +150,8 @@
     "    return action\n",
     "```\n",
     "\n",
+    "To summarize, the model-based reflex agent maintains an internal representation of the world state and uses a transition model and a sensor model to update its understanding of the environment based on received percepts. It then matches the updated state against a set of rules to determine the appropriate action to take in the given state. Finally, it returns the selected action. This agent combines knowledge of the world with its current perception to make intelligent decisions.\n",
+    "\n",
     "#### Learning agent\n",
     "\n",
     "<img src=\"https://i.stack.imgur.com/IiPoo.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
@@ -176,6 +178,63 @@
     "    else a <- argmaxa'Q[s, a']\n",
     "    return a\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem solving agents\n",
+    "\n",
+    "An agent that tries to come up with a sequence of actions that will bring the environment into a desired state.\n",
+    "\n",
+    "| Phase                 | Description                                                                                                                                             |\n",
+    "|-----------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| Goal Formulation | The agent determines the objectives based on the initial state and percepts from the environment.<br>A goal can be simple or complex, consisting of multiple sub-goals.          |\n",
+    "| Problem Formulation | The agent defines the problem in a structured way.<br>1. Initial State: The situation or state where the agent starts.<br>2. Successor Function: Description of possible actions and their resulting states. <br>3. Transition Model: Description of how the state evolves based on actions and current state. <br>4. Goal Test: Method used to determine if a state is a goal state.<br>5. Path Cost: Numerical cost assigned to each path, typically aiming to minimize this cost. |\n",
+    "| Search Phase | The agent explores the state space using different search algorithms to find a solution.<br>The search strategy depends on the nature of the problem, agent's knowledge, and available resources. <br>1. Uninformed Search Strategies: Algorithms like Breadth-First Search, Depth-First Search that have no additional information about the problem beyond its definition.<br>2. Informed Search Strategies: Algorithms like A* Search, Greedy Best-First Search that use additional knowledge about the problem.<br>3. Search Tree/Graph: Representation of the problem as a tree or graph where nodes are states and edges are actions.<br>4. Exploration Strategy: The agent's approach to exploring the state space, broadly or deeply or a combination of both. |\n",
+    "| Execution Phase | The agent implements the sequence of actions found in the search phase.<br>Actions are executed until the goal state is reached.<br>In a dynamic environment, the agent may need to react to changes and potentially redo some of the previous steps. |\n",
+    "\n",
+    "Breakdown of problem for different use cases:\n",
+    "\n",
+    "| Problem              | Initial State                                | Possible Actions                                        | Transition Model (How actions affect the state) | Goal Test (What defines success)    | Path Cost (Measure of the cost of a path) |\n",
+    "|----------------------|----------------------------------------------|---------------------------------------------------------|--------------------------------------------------|-------------------------------------|---------------------------------------------|\n",
+    "| Vacuum World         | Any state (room could be clean or dirty)     | Move Left, Move Right, Suck (clean the room)            | If at position A and Move Left (ML), then end up at position B which could be dirty or clean.    | All rooms are clean.                 | Number of steps taken in the cleaning process |\n",
+    "| 8 – Queen Problem    | Chessboard with no queens placed             | Add a queen to any empty square on the chessboard       | If a queen is added at position A1, it might make position B2 unsafe (FAIL) or B3 safe (SAFE). | All queens are placed safely (no two queens threaten each other). | Number of moves made, including backtracking |\n",
+    "| Travelling Problem   | Starting location, defined by the problem     | Take a flight, train, or go shopping (context-specific actions) | If at position A and decide to move to position S, then you end up at position S. | You have arrived at your destination (position B). | Sum of costs, time spent, and quality of travel |\n",
+    "\n",
+    "#### Different search strategies\n",
+    "\n",
+    "Search strategies can be generally categorized into Uninformed Search Strategies and Informed Search Strategies.\n",
+    "\n",
+    "1. Uninformed Search Strategies \n",
+    "These are algorithms that have no additional information about the problem beyond its definition. They include:\n",
+    "    - Breadth-First Search (BFS): This strategy explores all nodes at a given depth before moving to the next depth level.\n",
+    "        - implemented using a queue\n",
+    "        - time complexity: $O(b^d)$, where $b$ is the branching factor and $d$ is the depth of the shallowest goal node\n",
+    "        - space complexity: $O(b^d)$\n",
+    "    - Depth-First Search (DFS): This strategy explores all nodes along a path as far as possible before backtracking.\n",
+    "        - implemented using a stack / recursion\n",
+    "        - time complexity: $O(b^m)$, where $m$ is the maximum depth of the search tree\n",
+    "        - space complexity: $O(bm)$\n",
+    "    - Uniform-Cost Search: This strategy explores the node with the lowest path cost.\n",
+    "        - implemented using a priority queue\n",
+    "        - time complexity: $O(b^{(1 + C*/e)})$, where $C*$ is the cost of the optimal solution and $e$ is the minimum edge cost\n",
+    "    - Depth-Limited Search: This is a depth-first search strategy but with a limit on the depth of the search.\n",
+    "        - implemented using a stack / recursion, but completion is not guaranteed if the depth limit $l$ is reached before the goal $d$ is found $(l < d)$.\n",
+    "        - time complexity: $O(b^l)$, where $l$ is the depth limit\n",
+    "        - space complexity: $O(bl)$\n",
+    "    - Iterative Deepening Search: This is a depth-limited search strategy but with an increasing depth limit.\n",
+    "        - implemented using a stack / recursion\n",
+    "        - time complexity: $O(b^d)$, where $d$ is the depth of the shallowest goal node\n",
+    "        - space complexity: $O(bd)$\n",
+    "2. Informed Search Strategies\n",
+    "These are algorithms that use additional knowledge about the problem. They include:\n",
+    "    - Greedy Best-First Search: This strategy expands the node that is closest to the goal, as determined by a heuristic function.\n",
+    "        - \n",
+    "    - A* Search: This strategy expands the node that minimizes the cost function $f(n) = g(n) + h(n)$, where $g(n)$ is the cost of the path from the initial state to node $n$ and $h(n)$ is the heuristic estimate of the cost to reach the goal from node $n$.\n",
+    "    - AO* Search: This is an A* Search strategy but with a limit on the cost of the path.\n",
+    "\n"
    ]
   }
  ],
